src/objects/FieloPLT__ProgramPointType__c.object
<CustomObject>
    <description>It relates a Program with a specific Point Type.</description>
    <fields>
        <fullName>FieloPLT__AuditPoints__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It specifies where the &quot;Program Point Type&quot; used in a Redemption come from.</description>
        <inlineHelpText>When ticked, it specifies where &quot;Program Point Type&quot; used in a Redemption come from.</inlineHelpText>
        <label>Audit Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationMode__c</fullName>
        <description>It allows you to choose the Point Type expiration mode (Total or Partial Mode).</description>
        <inlineHelpText>Choose Point Type expiration mode: Total or Partial Mode.</inlineHelpText>
        <label>Expiration Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Specific Point Type for this Program.</description>
        <inlineHelpText>Choose the specific Point Type for this Program.</inlineHelpText>
        <label>Point Type</label>
        <referenceTo>FieloPLT__PointType__c</referenceTo>
        <relationshipLabel>Program Point Types</relationshipLabel>
        <relationshipName>ProgramPointTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Program where the &quot;Point Type&quot; belongs to.</description>
        <inlineHelpText>Choose the Program where the Point Type belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Program Point Types</relationshipLabel>
        <relationshipName>ProgramPointTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestPointApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Point Type needs to be approved before being granted to Members.</description>
        <inlineHelpText>When ticked, new Point Type needs to be approved before being granted to Members.</inlineHelpText>
        <label>Request Point Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique, automatically generated Program ID and Point Type ID field. It prevents relating several times a Program to the same Point Type.</description>
        <inlineHelpText>Unique, automatically generated Program ID and Point Type ID field.</inlineHelpText>
        <label>Unique Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program Point Type</label>
    <nameField>
        <displayFormat>PPT-{0000}</displayFormat>
        <label>Program Point Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Point Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>